# halo2-solidity-verifier

./: Cargo.toml  README.md
examples/: separately.rs
src/: codegen.rs  evm.rs  lib.rs  test.rs
src/codegen/: evaluator.rs  template.rs  util.rs
templates/: Halo2Verifier.sol  Halo2VerifierReusable.sol  Halo2VerifyingArtifact.sol
